# peridot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  install.sh  peridot.py  peridot_gui.py  peridot_mcp.py  pyproject.toml  readme  readme.md  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
mcp/: README_MCP.md
peridot_gui/: __init__.py  __main__.py
peridot_gui/web/: app.js  i18n.js  index.html  style.css
tests/: conftest.py  test_apply_symlink_safety.py  test_apply_transactional.py  test_apply_verify.py  test_bench.py  test_checkbox_ui.py  test_cli.py  test_cli_aliases.py  test_compression_heuristics.py  test_filter_entries_windows_paths.py  test_gui_api.py  test_gui_api_experimental.py  test_gui_endpoints.py  test_gui_experimental.py  test_gui_experimental_api.py  test_gui_helpers.py  test_history.py  test_i18n.py  test_i18n_pack_errors.py  test_inflate_payload.py  test_init.py  test_json_mode_without_rich.py  test_key_env_override.py  test_local_bundles_empty.py  test_manifest.py  test_mcp_apply_guard.py  test_mcp_apply_two_phase.py  test_mcp_server.py  test_mcp_tool_run_cli_json_parsing.py  test_pack_io.py  test_pack_noninteractive.py  test_pack_requires_rich.py  test_pack_skips_unreadable_posix.py  test_peridot_gui_api.py  test_peridot_gui_experimental.py  test_platform.py  test_presets.py  test_profiles_env_override.py  test_self_update.py  test_sensitive_detection.py  (+7 more)
web/: app.js  i18n.js  index.html
